; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/cx25821/extr_cx25821-video.c_vidioc_s_frequency.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/cx25821/extr_cx25821-video.c_vidioc_s_frequency.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_frequency = type { i32 }
%struct.cx25821_fh = type { i32, %struct.cx25821_dev* }
%struct.cx25821_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vidioc_s_frequency(%struct.file* %0, i8* %1, %struct.v4l2_frequency* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_frequency*, align 8
  %8 = alloca %struct.cx25821_fh*, align 8
  %9 = alloca %struct.cx25821_dev*, align 8
  %10 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_frequency* %2, %struct.v4l2_frequency** %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to %struct.cx25821_fh*
  store %struct.cx25821_fh* %12, %struct.cx25821_fh** %8, align 8
  %13 = load %struct.cx25821_fh*, %struct.cx25821_fh** %8, align 8
  %14 = getelementptr inbounds %struct.cx25821_fh, %struct.cx25821_fh* %13, i32 0, i32 1
  %15 = load %struct.cx25821_dev*, %struct.cx25821_dev** %14, align 8
  store %struct.cx25821_dev* %15, %struct.cx25821_dev** %9, align 8
  %16 = load %struct.cx25821_fh*, %struct.cx25821_fh** %8, align 8
  %17 = icmp ne %struct.cx25821_fh* %16, null
  br i1 %17, label %18, label %29

18:                                               ; preds = %3
  %19 = load %struct.cx25821_dev*, %struct.cx25821_dev** %9, align 8
  %20 = getelementptr inbounds %struct.cx25821_dev, %struct.cx25821_dev* %19, i32 0, i32 0
  %21 = load %struct.cx25821_fh*, %struct.cx25821_fh** %8, align 8
  %22 = getelementptr inbounds %struct.cx25821_fh, %struct.cx25821_fh* %21, i32 0, i32 0
  %23 = call i32 @v4l2_prio_check(i32* %20, i32* %22)
  store i32 %23, i32* %10, align 4
  %24 = load i32, i32* %10, align 4
  %25 = icmp ne i32 0, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %18
  %27 = load i32, i32* %10, align 4
  store i32 %27, i32* %4, align 4
  br label %33

28:                                               ; preds = %18
  br label %29

29:                                               ; preds = %28, %3
  %30 = load %struct.cx25821_dev*, %struct.cx25821_dev** %9, align 8
  %31 = load %struct.v4l2_frequency*, %struct.v4l2_frequency** %7, align 8
  %32 = call i32 @cx25821_set_freq(%struct.cx25821_dev* %30, %struct.v4l2_frequency* %31)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %29, %26
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @v4l2_prio_check(i32*, i32*) #1

declare dso_local i32 @cx25821_set_freq(%struct.cx25821_dev*, %struct.v4l2_frequency*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
